--- a/Makefile.am
+++ b/Makefile.am
@@ -1,13 +1,13 @@
 bin_PROGRAMS = unpaper
 MANPAGE_XSL ?= http://docbook.sourceforge.net/release/xsl-ns/current/manpages/docbook.xsl
 
-unpaper_SOURCES = unpaper.c unpaper.h
+unpaper_SOURCES = src/unpaper.c include/unpaper.h
 unpaper_LDADD = libunpaper.la
 
 pkglib_LTLIBRARIES = libunpaper.la
-libunpaper_la_SOURCES = error.c file.c imageprocess.c parse.c tools.c unpaper.h
+libunpaper_la_SOURCES = src/error.c src/file.c src/imageprocess.c src/parse.c src/tools.c include/unpaper.h
 libunpaper_la_LDFLAGS = -version-info 5:3:5 -no-undefined
-include_HEADERS = unpaper.h
+include_HEADERS = include/unpaper.h
 
 dist_doc_DATA = NEWS COPYING README AUTHORS TODO
 dist_man_MANS = unpaper.1
